<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large">

    <LinearLayout
        android:id="@+id/layout_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_repo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/repo_name" />

        <TextView
            android:id="@+id/tv_repo_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="@string/repo_description" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forks"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_forks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/zero" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stars"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/zero" />

        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/layout_loader"
        layout="@layout/layout_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>